solucion de algunos errores de compilacion, image icon no volvia a /

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.thymeleaf.cache=false
 spring.devtools.restart.enabled=true
-debug=true
+debug=false
 
 spring.datasource.url=jdbc:postgresql://localhost:5434/db_mascotas
 spring.datasource.username=${DB_USER_NAME}
